<resources>
    <string name="app_name">My Merry Catalogue</string>
    <string name="applicationSettings">Application Settings</string>
    <string name="nameTextView">Name: </string>
    <string name="dateCreatedTextView">Date Created: </string>
    <string name="descriptionTextView">Description: </string>
    <string name="ingredientsTextView">Ingredients: </string>
    <string name="instructionsTextView">Instructions: </string>
    <string name="categoriesTextView">Categories: </string>
    <string name="imageTextView">Upload Image: </string>
    <string name="updateView">Update Recipe</string>
    <string name="createView">New Recipe</string>
    <string name="deleteView">Delete Recipe</string>
    <string name="editButton">Edit </string>
    <string name="deleteButton">Delete </string>
    <string name="writeReview">Write Review </string>
    <string name="checkReviews">Check Reviews </string>
    <string name="newReview">New Review </string>
    <string name="deleteReview">Delete Review </string>
    <string name="updateReview">Update Review </string>
    <string name="reviewRating">Rating: </string>
    <string name="reviewName">Review Name: </string>
    <string name="review">Review: </string>
    <string name="allRecipes">Your Recipes: </string>
    <string name="galleryImage">Gallery Image</string>
    <string name="quickRecipes">Quick Recipes</string>
    <string name="connectionStatus">Your Offline Please Try Again When You Have An Internet Connection</string>
    <string name="loadingStatus">Loading Recipes Now!!!</string>
    <string name="history">History: </string>
    <string-array name="sortingOptions">
        <item>Not Sorted</item>
        <item>Sort By Published Date</item>
        <item>Sort By Name</item>
        <item>Sort By Recipe Rating</item>
    </string-array>
</resources>
